# unihelp

./: .gitignore  LICENSE
backend/: manage.py  pyproject.toml
backend/core/: db_utils.py  institutions.py  pipeline.py  serializers.py  urls.py  views.py
backend/institutions/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/institutions/fixtures/: seed_institutions.json
backend/institutions/migrations/: 0001_initial.py
backend/leads/: admin.py  apps.py  models.py  urls.py  views.py
backend/leads/migrations/: 0001_initial.py
backend/maslul/: asgi.py  celery.py  db_router.py  urls.py  wsgi.py
backend/maslul/settings/: base.py  dev.py  prod.py
backend/programs/: admin.py  alias_data.py  api_urls.py  apps.py  mapper.py  models.py  normalizer.py  serializers.py  urls.py  views.py
backend/reviews/: admin.py  apps.py  models.py  signals.py  tasks.py  urls.py  views.py
scrapers/: abstract_scraper.py  base_scraper.py  celery_app.py  consts.py  db_tool.py  django_client.py  models.py  playwright_scraper.py  proxy.py  pyproject.toml  stealth.py  tasks.py
scrapers/common/: async_request_client.py  decorators.py  logger_manager.py  token_bucket.py
scrapers/institutions/: institutions.yaml
scrapers/institutions/bgu/: consts.py  (+2 more)
scrapers/reddit/: config.yaml  consts.py  scraper.py
scrapers/study/: config.yaml  consts.py  scraper.py
scrapers/tau/: config.yaml  consts.py  programs.py  scraper.py
scrapers/tests/: test_db_tool.py  test_db_tool_integration.py  test_parsers.py
scrapers/thestudent/: config.yaml  consts.py  scraper.py
(+57 files in other folders)
